# notion-document-store

./: .dockerignore  .gitignore  Dockerfile  NOTION_SETUP.md  README.md  docker-compose.yml  hello.py  pyproject.toml  test_notion_api.py
src/notion_document_store/: __main__.py  health_server.py  server.py
src/notion_document_store/modules/: data_types.py  notion_client.py
tests/: __init__.py  test_mcp_server.py
